# RenderCubed

./: .gitignore  CMakeLists.txt  README.md  imgui.ini
assets/shaders/: debug_gbuffer_pass.slang  debug_gbuffer_pass.spv  geometry_pass.slang  geometry_pass.spv  pbr_pass.slang  pbr_pass.spv  slang.spv  test_pass.slang  test_pass.spv  triangle_pass.slang  triangle_pass.spv
src/: main.cpp
src/backend/: AppWindow.h  BackendConfig.h
src/passes/: DebugOverlayPass.h  DebugPass.h  DebugPresentPass.h  GeometryPass.h  LightPass.h  PbrPass.h  SolidTransformPass.h
src/renderable/: DebugLightMeshes.h  DescriptorBindings.h  FrameUniforms.h  GltfModelAsset.cpp  GltfModelAsset.h  LightTypes.h  Mesh.h  ModelAsset.h  ModelMaterialSet.h  ObjModelAsset.h  RenderUtils.h  RenderableModel.h  Sampler.h  SceneLightSet.h  Texture.h
src/renderer/: ForwardRenderer.h  FullscreenRenderPass.h  MeshRenderPass.h  OpaqueMeshPass.h  PassUniformSet.h  PipelineSpec.h  RasterRenderPass.h  RenderPass.h  SceneRenderPass.h  ShaderProgram.h  TestPass.h  UniformMeshRenderPass.h
src/utils/: DefaultDebugUI.h
